fix alignment

--- a/docs/output.css
+++ b/docs/output.css
@@ -576,6 +576,11 @@ video {
   margin-right: auto;
 }
 
+.mx-7 {
+  margin-left: 1.75rem;
+  margin-right: 1.75rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
